Commit after 8 hours
